<resources>
    <string name="app_name">ShoeStore_P1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="alert">Fill the required fields</string>
    <string name="welcome">Welcome,</string>
    <string name="logo">Logo</string>
    <string name="explore_instructions">Explore Instructions</string>
    <string name="instructions">Instructions</string>
    <string name="instructionOne">Press on explore outlet button to go to the next page.</string>
    <string name="instructionTwo">In the next page you are able to see a list of different shoes of different brands and explore the outlet.</string>
    <string name="instructionThree">You can add new shoe by pressing on the + button and fill in all the required files then press on save button to add it to the list or you can press on cancel and return to the outlet page.</string>
    <string name="instructionsButton">Explore the Outlet</string>
    <string name="shoeName">Name:</string>
    <string name="shoeSize">Size:</string>
    <string name="shoeBrand">Brand:</string>
    <string name="shoeDescription">Description:</string>
</resources>