<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".User">


    <!--Here, I used scroll view to be able to see the whole content on different screen and when the
screen layout changes-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <!--        Here, I used constraint view because it will be easier and more efficient to set the
distances between the content and to set the buttons to be set as a ratio between the end of the
screen and the last editText view -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/emailLabel"
                    style="@style/userDetails"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/passwordLabel"
                    style="@style/userDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userEmail" />

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

                <Button
                    android:id="@+id/createButton"
                    style="@style/buttonStyle"
                    android:layout_marginBottom="70dp"
                    android:text="@string/signup"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/loginButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alertLabel" />

                <Button
                    android:id="@+id/loginButton"
                    style="@style/buttonStyle"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/login"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/createButton"
                    app:layout_constraintTop_toBottomOf="@+id/alertLabel" />

                <TextView
                    android:id="@+id/alertLabel"
                    android:layout_marginTop="22dp"
                    android:text="@string/alert"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userPassword"
                    style="@style/error" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</layout>