<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".instructions">

    <!--Here, I used scroll view to be able to see the whole content on different screen and when the
screen layout changes-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <!--        Here, I used constraint view because it will be easier and more efficient to set the
 distances between the content and to set the buttons to be set as a ratio between the end of the
 screen and the last Text view -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleInstructions"
                    style="@style/userDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/instructions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/firstInstruction"
                    style="@style/instruction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/instructionOne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleInstructions" />

                <TextView
                    android:id="@+id/secondInstruction"
                    style="@style/instruction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/instructionTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstInstruction" />

                <TextView
                    android:id="@+id/thirdInstruction"
                    style="@style/instruction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/instructionThree"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondInstruction" />

                <Button
                    android:id="@+id/insturctionButton"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/instructionsButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thirdInstruction" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</layout>