<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcome">


    <!--Here, I used scroll view to be able to see the whole content on different screen and when the
screen layout changes-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <!--        Here, I used constraint view because it will be easier and more efficient to set the
 distances between the content and to set the buttons to be set as a ratio between the end of the
 screen and the last Text view -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcomeLabel"
                    style="@style/userDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/welcome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/welcomeEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/antic_slab"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/welcomeLabel"
                    app:layout_constraintStart_toEndOf="@+id/welcomeLabel"
                    app:layout_constraintTop_toTopOf="@+id/welcomeLabel"
                    tools:text="maged@gmail.com" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="157dp"
                    android:layout_height="207dp"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

                <Button
                    android:id="@+id/welcomeButton"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/explore_instructions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>